--- a/roles/mongodb/templates/mongodb_cluster.conf.j2
+++ b/roles/mongodb/templates/mongodb_cluster.conf.j2
@@ -26,7 +26,9 @@ net:
 processManagement:
   timeZoneInfo: /usr/share/zoneinfo
 
-#security:
+security:
+  keyFile: {{ keyfile_path }}
+  transitionToAuth: true
 
 #operationProfiling:
 
